      (TransformedImage.read_datum): Use the `transform` member.
      (TransformedImage.read_bands): Use the `transform` member.
    * algorithms/transforms.py
      (LinearTransform.__init__): Added dim_in, dim_out, and dtype members.
      (LinearTransform.__call__): Cast transformed data to appropriate type.
      (LinearTransform.chain): New method to chain two transforms together.

2013-01-19	tboggs <tboggs@users.sourceforge.net>

    Added a FisherLinearDiscriminant class, fixed doc strings, and handle
    LinearTransformation objects in TrainingClass.transform.

    * algorithsm/algorithms.py
      (FisherLinearDiscriminant): New class.
      (linear_discriminant): Returns a FisherLinearDiscriminant object instead
        of a tuple.
      (reduce_eigenvectors): Function removed (replaced by method in
        PrincipleComponents class).
      (TrainingClass.transform): Also accept a LinearTransform as arg.
      (TrainingClassSet.transform): Get nbands from one of the classes.
    * algorithms/detectors.py (MatchedFilter): Fixed latex markup in doc string.
    * algorithms/transforms.py (LinearTransform): Fixed doc string.
    * algorithms/__init__.py: Removed reduce_eigenvectors from imports
    
2013-01-17	tboggs <tboggs@users.sourceforge.net>

    Added a matched filter function and created a PrincipalComponents object.
    
    * graphics/ndwindow.py
      (WxNDWindowFrame.create_axes_list): Call glutInit to prevent error if
        `ndwindow` is called without class labels.
    * algorithms/algorithms.py
      (mean_cov): Use 64-bit floats for covariance calculation.
      (PrincipalComponents): New class.
      (principal_components): Function now returns a PrincipalComponents object
        instead of a tuple.
    * algorithms/detectors.py: New file. Contains MatchedFilter class.
    * algorithms/transforms.py: New file. Contains LinearTransform class.
    * algorithms/spymath.py: New file.  Contains matrix_sqrt function.
